# CPPEDITOR

./: .gitignore  CMakeLists.txt  README.md
DATA/themes/: default.qss
src/: main.cpp
src/GDBmanager/: GDBmanager.cpp  GDBmanager.h
src/compilemanager/: CompilerManager.cpp  CompilerManager.h
src/core/: ActionManager.cpp  ActionManager.h  MainWindow.cpp  MainWindow.h
src/filemanager/: CodeEditor.cpp  CodeEditor.h  EditorTabWidget.cpp  EditorTabWidget.h  FileTreeWidget.cpp  FileTreeWidget.h
src/formatter/: CodeFormatter.cpp  CodeFormatter.h
src/judge/: JudgeEngine.cpp  JudgeEngine.h  JudgeResultWidget.cpp  JudgeResultWidget.h
src/linter/: LinterManager.cpp  LinterManager.h
src/ui/: QssManager.cpp  QssManager.h
